# GEMM

./: .gitignore  README.md
Linux/cmake/mpi/: CMakeLists.txt  compute.c  mpi
Linux/cmake/serial/: auto_build.py  timing.txt
Linux/cmake/simd/: auto_build.py  main.c  timing.txt
Linux/cmake/simd/avx/: auto_build.py  timing.txt
Linux/cmake/simd/sse/: auto_build.py  compute.c  compute.h  timing.txt
Linux/mpi/: auto_build.py  compute.h
Linux/openmp/: CMakeLists.txt  auto_build.py  openmp
Linux/serial/: CMakeLists.txt
Linux/serial/optimal/: main.c  serial
Linux/simd/avx/: main.c
Linux/simd/sse/: main.c
cmake/mpi/: auto_build.py  compute.c  compute.h  main.c  mpi  run.sh  timing.txt
cmake/openmp/: auto_build.py  compute.c  compute.h  main.c  openmp  timing.txt
cmake/serial/: CMakeLists.txt  compute.h  main.c  serial  timing.txt
cmake/serial/optimal/: auto_build.py  compute.c  compute.h  timing.txt
cmake/simd/: CMakeLists.txt  auto_build.py  compute.c  compute.h  simd  timing.txt
cmake/simd/avx/: CMakeLists.txt  avx  compute.c  compute.h  main.c  timing.txt
cmake/simd/manual/: CMakeLists.txt  auto_build.py  avx  compute.c  main.c  timing.txt
cmake/simd/sse/: CMakeLists.txt  auto_build.py  compute.c  main.c  sse  timing.txt
linux/extreme/: CMakeLists.txt  auto_build.py  compute.c  compute.h  main.c  run.sh
linux/mpi/: compute.c  compute.h  main.c  mpi  run.sh  timing.txt
linux/openmp/: compute.c  main.c  openmp  timing.txt
linux/serial/: compute.c  compute.h  main.c  serial  timing.txt
linux/serial/optimal/: serial
linux/serial_optimize/: CMakeLists.txt  auto_build.py  compute.c  main.c  serial_opt  timing.txt
linux/simd/: compute.c  main.c  simd  timing.txt
linux/simd/avx/: avx  compute.c  main.c  timing.txt
linux/simd/sse/: calc_ave.sh  compute.c  main.c  sse  timing.txt
serial/: compute.c  compute.h  main.c
windows/: auto_build.py  timing.txt
windows/openmp/: CMakeLists.txt  auto_build.py  compute.c  compute.h  main.c  timing.txt
windows/serial/: CMakeLists.txt  compute.c
windows/serial_optimize/: CMakeLists.txt  auto_build.py  compute.c  main.c  timing.txt
windows/simd/: CMakeLists.txt  auto_build.py  compute.c  compute.h  timing.txt
windows/simd/avx/: CMakeLists.txt  auto_build.py  compute.c  main.c  timing.txt
windows/simd/sse/: CMakeLists.txt  auto_build.py  compute.c  main.c  timing.txt
